# display_opt

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: dpi.c  dpi.h  main.c  video_adapter.c  video_adapter.h
